...
                      //                            yet been clicked, it is not
                      //                            highlighted
                    );
                  }

                  return InkWell(
                    key: const Key('search_icon_button'),
                    onTap: (currentUrlOrSearchSentence != null &&
                            currentUrlOrSearchSentence.isNotEmpty)
                        ? () {
                            // This if statement is used enables to click on the
                            // search icon button in order to disable the search
                            // sentence without clearing the text field.
...
      children: [
        ConstrainedBox(
          constraints: BoxConstraints(
            maxWidth: kDropdownButtonMaxWidth,
          ),
          child: DropdownButton<String>(
            key: const Key('sort_filter_parms_dropdown_button'),
            value: (playlistListVMlistenTrue
                    .getSelectedPlaylistAudioSortFilterParmsNameForView(
                      audioLearnAppViewType:
                          AudioLearnAppViewType.playlistDownloadView,
                      translatedAppliedSortFilterParmsName:
                          AppLocalizations.of(context)!
...
            // between the button text and its boarder
            width: kSmallIconButtonWidth - 2,
            child: Tooltip(
              message: AppLocalizations.of(context)!
                  .clearPlaylistUrlOrSearchButtonTooltip,
              child: IconButton(
                key: const Key('clearPlaylistUrlOrSearchButtonKey'),
                onPressed: () {
                  _playlistUrlOrSearchController.clear();
                  _containsURL = false;

                  // Disables the search button and call notifyListeners()
                  playlistListVMlistenFalse.disableSearchSentence();
...
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          Expanded(
            flex: 6, // controls the height ratio
            child: TextField(
              key: const Key('youtubeUrlOrSearchTextField'),
              controller: _playlistUrlOrSearchController,
              style: const TextStyle(fontSize: 15),
              decoration: InputDecoration(
                labelText: AppLocalizations.of(context)!.ytPlaylistLinkLabel,
                hintText: AppLocalizations.of(context)!.ytPlaylistLinkHintText,
                border: const OutlineInputBorder(),
...
