import 'dart:convert';
import 'dart:io';

import 'package:audiolearn/models/picture.dart';
import 'package:audiolearn/viewmodels/audio_download_vm.dart';
import 'package:audiolearn/viewmodels/audio_player_vm.dart';
import 'package:audiolearn/viewmodels/comment_vm.dart';
import 'package:audiolearn/viewmodels/date_format_vm.dart';
import 'package:audiolearn/viewmodels/picture_vm.dart';
import 'package:audiolearn/viewmodels/playlist_list_vm.dart';
import 'package:audiolearn/viewmodels/warning_message_vm.dart';
import 'package:audiolearn/views/widgets/comment_list_add_dialog.dart';
import 'package:audiolearn/views/widgets/playlist_comment_list_dialog.dart';
import 'package:file_picker/file_picker.dart';
import 'package:flutter/material.dart';
import 'package:flutter_test/flutter_test.dart';
import 'package:integration_test/integration_test.dart';
import 'package:path/path.dart' as path;
import 'package:audiolearn/main.dart' as app;

import 'package:audiolearn/constants.dart';
import 'package:audiolearn/models/playlist.dart';
import 'package:audiolearn/services/json_data_service.dart';
import 'package:audiolearn/services/settings_data_service.dart';
import 'package:audiolearn/utils/dir_util.dart';
import 'package:shared_preferences/shared_preferences.dart';

import '../test/viewmodels/mock_audio_download_vm.dart';
import 'integration_test_util.dart';
import 'mock_file_picker.dart';

void main() {
  // Necessary to avoid FatalFailureException (FatalFailureException: Failed
  // to perform an HTTP request to YouTube due to a fatal failure. In most
  // cases, this error indicates that YouTube most likely changed something,
  // which broke the library.
  // If this issue persists, please report it on the project's GitHub page.
  IntegrationTestWidgetsFlutterBinding.ensureInitialized();

  group('Search icon button test', () {
    group('Audio search word selection', () {
      testWidgets('''First, select the existing 'janco' sort/filter
          parms in the SF dropdown button. Then enter the search word 'La' in the
          'Youtube Link''', (WidgetTester tester) async {
        // Link or Search' text field. After entering 'L', verify that the search
        // icon button is now enabled. Then, enter 'La' search word, click on the
        // enabled search icon button and verify the reduced displayed audio list.
        // After that, delete the 'a' letter from the 'La' search word and verify
        // the changed displayed audio list. Since the search button was used,
        // modifying the search text applies at each search text change. Then,
        // select the 'default' dropdon icon button and verify that now, as the
        // search button was tapped, applying the 'default' sort filter parms
        // is impacted by the still existing search word. Then, enters a https URL
        // in youtubeUrlOrSearchTextField and verify that the search icon button
        // is disabled. and that the download single video button is enabled. Then,
        // tap on the delete button to delete the URL in the search text word and
        // verify that the search icon button is disabled and that the download
        // single video button is disabled. Finally, verify that the search text
        // field is empty and that the displayed audio list is the same as the one
        // before entering the search word.
        //
        // Test data source dir: 'sort_and_filter_audio_dialog_widget_test'
        await IntegrationTestUtil.initializeAndroidApplicationAndSelectPlaylist(
          tester: tester,
          tapOnPlaylistToggleButton: false,
        );

        // Verify that the download single video button is
        // now disabled
        await IntegrationTestUtil.verifyWidgetIsDisabled(
          tester: tester,
          widgetKeyStr: 'downloadSingleVideoButton',
        );

        // Select 'janco' dropdown button item to apply the existing
        // 'janco' sort/filter parms
        final Finder dropDownButtonFinder =
            find.byKey(const Key('sort_filter_parms_dropdown_button'));

        final Finder dropDownButtonTextFinder = find.descendant(
          of: dropDownButtonFinder,
          matching: find.byType(Text),
        );

        // Tap on the current dropdown button item to open the dropdown
        // button items list
        await tester.tap(dropDownButtonTextFinder);
        await tester.pumpAndSettle();

        // And select the 'janco' sort/filter item
        String sortFilterParmsTitle = 'janco';
        Finder sortFilterParmsDropDownTextFinder =
            find.text(sortFilterParmsTitle);

        await tester.tap(sortFilterParmsDropDownTextFinder);
        await tester.pumpAndSettle();

        // And verify the order of the playlist audio titles

        List<String>
            audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms = [
          "Jancovici m'explique l’importance des ordres de grandeur face au changement climatique",
          "La surpopulation mondiale par Jancovici et Barrau",
          "Ce qui va vraiment sauver notre espèce par Jancovici et Barrau",
        ];

        IntegrationTestUtil.checkAudioOrPlaylistTitlesOrderInListTile(
          tester: tester,
          audioOrPlaylistTitlesOrderedLst:
              audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms,
        );

        // Verify the disabled state of the search icon button
        IntegrationTestUtil.validateSearchIconButton(
          tester: tester,
          searchIconButtonState: SearchIconButtonState.disabled,
        );

        // Verify the presence of the disabled stop button
        await IntegrationTestUtil.verifyWidgetIsDisabled(
          tester: tester,
          widgetKeyStr:
              'stopDownloadingButton', // this button is disabled if the
          //                                     'Youtube Link or Search' dosn't
          //                                     contain a search word or sentence
        );

        // Now enter the first letter of the search word
        await tester.tap(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
        );
        await tester.pumpAndSettle();
        await tester.enterText(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
          'L',
        );
        await tester.pumpAndSettle(const Duration(milliseconds: 200));

        // Verify that the search icon button is now enabled but inactive
        IntegrationTestUtil.validateSearchIconButton(
          tester: tester,
          searchIconButtonState: SearchIconButtonState.enabledInactive,
        );

        // Verify the presence of the delete button
        IntegrationTestUtil.verifyWidgetIsEnabled(
          tester: tester,
          widgetKeyStr:
              'clearPlaylistUrlOrSearchButtonKey', // this button is disabled if the
          //                                     'Youtube Link or Search' dosn't
          //                                     contain a search word or sentence
        );

        // Ensure that since the search icon button was not yet pressed,
        // the displayed audio list is the same as the one before entering
        // the first letter of the search word.
        IntegrationTestUtil.checkAudioOrPlaylistTitlesOrderInListTile(
          tester: tester,
          audioOrPlaylistTitlesOrderedLst:
              audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms,
        );

        // Enter the second letter of the 'La' search word. The crazy integration
        // test does not always update the test field. To fix this bug, first
        // select the text field and then enter the text.

        // Select the text field
        await tester.tap(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
        );
        await tester.pumpAndSettle();

        // Enter the second letter of the 'La' search word
        await tester.enterText(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
          'La',
        );
        await tester.pumpAndSettle(const Duration(milliseconds: 200));

        // Verify that the search icon button is now enabled but inactive
        IntegrationTestUtil.validateSearchIconButton(
          tester: tester,
          searchIconButtonState: SearchIconButtonState.enabledInactive,
        );

        // Ensure that since the search icon button was not yet pressed,
        // the displayed audio list is the same as the one before entering
        // the first letter of the search word.
        IntegrationTestUtil.checkAudioOrPlaylistTitlesOrderInListTile(
          tester: tester,
          audioOrPlaylistTitlesOrderedLst:
              audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms,
        );

        // Now tap on the search icon button
        await tester.tap(find.byKey(const Key('search_icon_button')));
        await tester.pumpAndSettle();

        // Verify that the search icon button is now enabled and active
        IntegrationTestUtil.validateSearchIconButton(
          tester: tester,
          searchIconButtonState: SearchIconButtonState.enabledActive,
        );

        // Now verify the order of the reduced playlist audio titles

        audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms = [
          "La surpopulation mondiale par Jancovici et Barrau",
        ];

        // Ensure that since the search icon button was now pressed,
        // the displayed audio list is modified.
        IntegrationTestUtil.checkAudioOrPlaylistTitlesOrderInListTile(
          tester: tester,
          audioOrPlaylistTitlesOrderedLst:
              audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms,
        );

        // Now remove the second letter of the 'La' search word
        await tester.tap(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
        );
        await tester.pumpAndSettle();
        await tester.enterText(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
          'L',
        );
        await tester.pumpAndSettle(const Duration(milliseconds: 200));

        // Verify that the search icon button is now enabled and active
        IntegrationTestUtil.validateSearchIconButton(
          tester: tester,
          searchIconButtonState: SearchIconButtonState.enabledActive,
        );

        // And verify the order of the playlist audio titles. Since
        // the search icon button was used, modifying the search text
        // is applied at each search text change

        audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms = [
          "Jancovici m'explique l’importance des ordres de grandeur face au changement climatique",
          "La surpopulation mondiale par Jancovici et Barrau",
        ];

        // Ensure that since the search icon button was used,
        // the displayed audio list is modified.
        IntegrationTestUtil.checkAudioOrPlaylistTitlesOrderInListTile(
          tester: tester,
          audioOrPlaylistTitlesOrderedLst:
              audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms,
        );

        // Verify that the search icon button is now enabled and active
        IntegrationTestUtil.validateSearchIconButton(
          tester: tester,
          searchIconButtonState: SearchIconButtonState.enabledActive,
        );

        // Then reenter the second search word letter
        await tester.tap(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
        );
        await tester.pumpAndSettle();
        await tester.enterText(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
          'La',
        );
        await tester.pumpAndSettle(const Duration(milliseconds: 200));

        // Now verify the order of the reduced playlist audio titles

        audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms = [
          "La surpopulation mondiale par Jancovici et Barrau",
        ];

        // Ensure that since the search icon button was now pressed,
        // the displayed audio list is modified.
        IntegrationTestUtil.checkAudioOrPlaylistTitlesOrderInListTile(
          tester: tester,
          audioOrPlaylistTitlesOrderedLst:
              audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms,
        );

        // Tap on the current dropdown button item to open the dropdown
        // button items list
        await tester.tap(dropDownButtonTextFinder);
        await tester.pumpAndSettle();

        // And select the 'default' sort/filter item
        sortFilterParmsTitle = 'default';
        sortFilterParmsDropDownTextFinder = find.text(sortFilterParmsTitle);

        await tester.tap(sortFilterParmsDropDownTextFinder);
        await tester.pumpAndSettle();

        // And verify the order of the playlist audio titles

        audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms = [
          "La surpopulation mondiale par Jancovici et Barrau",
          "La résilience insulaire par Fiona Roche",
          "Le Secret de la RÉSILIENCE révélé par Boris Cyrulnik",
        ];

        IntegrationTestUtil.checkAudioOrPlaylistTitlesOrderInListTile(
          tester: tester,
          audioOrPlaylistTitlesOrderedLst:
              audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms,
        );

        // Verify that the search icon button is now enabled and active
        IntegrationTestUtil.validateSearchIconButton(
          tester: tester,
          searchIconButtonState: SearchIconButtonState.enabledActive,
        );

        // Now entering a URL in the search text word

        await tester.tap(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
        );
        await tester.pumpAndSettle();
        await tester.enterText(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
          'https://www.youtube.com/watch?v=ctD3mbQ7RPk',
        );
        await tester.pumpAndSettle(const Duration(milliseconds: 200));

        // Verify that the search icon button is now disabled
        IntegrationTestUtil.validateSearchIconButton(
          tester: tester,
          searchIconButtonState: SearchIconButtonState.disabled,
        );

        // Verify that the download single video button is
        // now enabled
        IntegrationTestUtil.verifyWidgetIsEnabled(
          tester: tester,
          widgetKeyStr: 'downloadSingleVideoButton',
        );

        // Verify the presence of the delete button
        IntegrationTestUtil.verifyWidgetIsEnabled(
          tester: tester,
          widgetKeyStr:
              'clearPlaylistUrlOrSearchButtonKey', // this button is disabled if the
          //                                     'Youtube Link or Search' dosn't
          //                                     contain a search word or sentence
        );

        // And verify the order of the playlist audio titles

        audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms = [
          "Jancovici m'explique l’importance des ordres de grandeur face au changement climatique",
          "La surpopulation mondiale par Jancovici et Barrau",
          "La résilience insulaire par Fiona Roche",
          "Le Secret de la RÉSILIENCE révélé par Boris Cyrulnik",
          "Les besoins artificiels par R.Keucheyan",
          "3 fois où un économiste m'a ouvert les yeux (Giraud, Lefournier, Porcher)",
          "Ce qui va vraiment sauver notre espèce par Jancovici et Barrau",
        ];

        IntegrationTestUtil.checkAudioOrPlaylistTitlesOrderInListTile(
          tester: tester,
          audioOrPlaylistTitlesOrderedLst:
              audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms,
        );

        // Now tap on the delete button to delete the URL in the search
        // text word
        await tester.tap(
          find.byKey(
            const Key('clearPlaylistUrlOrSearchButtonKey'),
          ),
        );
        await tester.pumpAndSettle();

        // Verify that the stop text button replaced the
        // delete icon button, but is disabled
        await IntegrationTestUtil.verifyWidgetIsDisabled(
          tester: tester,
          widgetKeyStr: 'stopDownloadingButton',
        );

        // Verify that the download single video button is
        // now disabled
        await IntegrationTestUtil.verifyWidgetIsDisabled(
          tester: tester,
          widgetKeyStr: 'downloadSingleVideoButton',
        );

        // And verify that the search text field is empty
        expect(
          (find.byKey(const Key('youtubeUrlOrSearchTextField'))),
          findsOneWidget,
        );

        // And verify the order of the playlist audio titles
        IntegrationTestUtil.checkAudioOrPlaylistTitlesOrderInListTile(
          tester: tester,
          audioOrPlaylistTitlesOrderedLst:
              audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms,
        );

        // Purge the test playlist directory so that the created test
        // files are not uploaded to GitHub
        DirUtil.deleteFilesInDirAndSubDirs(
          rootPath: kPlaylistDownloadRootPathWindowsTest,
        );
      });
      testWidgets(
          '''Finish by reducing, then emptying the search word. First, select the
           existing 'janco' sort/filter parms in the SF dropdown button. Then enter
           the search word 'La' in the 'Youtube ''',
          (WidgetTester tester) async {
        // Link or Search' text field. After entering 'La', verify that the search
        // icon button is now enabled and click on it. Then, reduce the search word
        // to one letter ('L') and verify that the audio liat was updatefd. Then,
        // select the 'default' dropdon icon
        // button and verify that now, as the search button was tapped, applying
        // the 'default' sort filter parms is impacted by the still existing search
        // word. Then, empty the search word and verify that the search icon button
        // is disabled.
        //
        // Test data source dir: 'sort_and_filter_audio_dialog_widget_test'
        await IntegrationTestUtil.initializeAndroidApplicationAndSelectPlaylist(
          tester: tester,
          tapOnPlaylistToggleButton: false,
        );

        // Select 'janco' dropdown button item to apply the existing
        // 'janco' sort/filter parms
        final Finder dropDownButtonFinder =
            find.byKey(const Key('sort_filter_parms_dropdown_button'));

        final Finder dropDownButtonTextFinder = find.descendant(
          of: dropDownButtonFinder,
          matching: find.byType(Text),
        );

        // Tap on the current dropdown button item to open the dropdown
        // button items list
        await tester.tap(dropDownButtonTextFinder);
        await tester.pumpAndSettle();

        // And select the 'janco' sort/filter item
        String sortFilterParmsTitle = 'janco';
        Finder sortFilterParmsDropDownTextFinder =
            find.text(sortFilterParmsTitle);

        await tester.tap(sortFilterParmsDropDownTextFinder);
        await tester.pumpAndSettle();

        // And verify the order of the playlist audio titles

        List<String>
            audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms = [
          "Jancovici m'explique l’importance des ordres de grandeur face au changement climatique",
          "La surpopulation mondiale par Jancovici et Barrau",
          "Ce qui va vraiment sauver notre espèce par Jancovici et Barrau",
        ];

        IntegrationTestUtil.checkAudioOrPlaylistTitlesOrderInListTile(
          tester: tester,
          audioOrPlaylistTitlesOrderedLst:
              audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms,
        );

        // Verify the disabled state of the search icon button
        IntegrationTestUtil.validateSearchIconButton(
          tester: tester,
          searchIconButtonState: SearchIconButtonState.disabled,
        );

        // Now enter the 2 letters of the search word
        await tester.tap(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
        );
        await tester.pumpAndSettle();
        await tester.enterText(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
          'La',
        );
        await tester.pumpAndSettle(const Duration(milliseconds: 200));

        // Verify that the search icon button is now enabled but inactive
        IntegrationTestUtil.validateSearchIconButton(
          tester: tester,
          searchIconButtonState: SearchIconButtonState.enabledInactive,
        );

        // Now tap on the search icon button
        await tester.tap(find.byKey(const Key('search_icon_button')));
        await tester.pumpAndSettle();

        // And verify the order of the playlist audio titles. Since
        // the search icon button was used, modifying the search text
        // is applied at each search text change

        audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms = [
          "La surpopulation mondiale par Jancovici et Barrau",
        ];

        IntegrationTestUtil.checkAudioOrPlaylistTitlesOrderInListTile(
          tester: tester,
          audioOrPlaylistTitlesOrderedLst:
              audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms,
        );

        // Now reduce the search word to 1 letter
        await tester.tap(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
        );
        await tester.pumpAndSettle();
        await tester.enterText(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
          'L',
        );
        await tester.pumpAndSettle(const Duration(milliseconds: 200));

        // Verify the order of the playlist audio titles. Since
        // the search icon button was used, modifying the search text
        // is applied at each search text change

        audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms = [
          "Jancovici m'explique l’importance des ordres de grandeur face au changement climatique",
          "La surpopulation mondiale par Jancovici et Barrau",
        ];

        IntegrationTestUtil.checkAudioOrPlaylistTitlesOrderInListTile(
          tester: tester,
          audioOrPlaylistTitlesOrderedLst:
              audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms,
        );

        // Now re-enter the 2 letters of the search word
        await tester.tap(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
        );
        await tester.pumpAndSettle();
        await tester.enterText(
          find.byKey(
            const Key('youtubeUrlOrSearchTextField'),
          ),
          'La',
        );
        await tester.pumpAndSettle(const Duration(milliseconds: 200));

        // And verify the order of the playlist audio titles. Since
        // the search icon button was used, modifying the search text
        // is applied at each search text change

        audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms = [
          "La surpopulation mondiale par Jancovici et Barrau",
        ];

        IntegrationTestUtil.checkAudioOrPlaylistTitlesOrderInListTile(
          tester: tester,
          audioOrPlaylistTitlesOrderedLst:
              audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms,
        );

        // Tap on the current dropdown button item to open the dropdown
        // button items list
        await tester.tap(dropDownButtonTextFinder);
        await tester.pumpAndSettle();

        // And select the 'default' sort/filter item
